# In-house-leave-management

./: .gitattributes  Dockerfile  DockerfileForWorker  README.md  kubenetes.yml  pyproject.toml
.github/workflows/: home.yml
grants/: admin.py  exceptions.py  models.py  urls.py  views.py
grants/migrations/: 0001_initial.py  0002_grantleave.py  0002_remove_grantleave_grant.py  0003_alter_grant_stock.py  0003_rename_grantleave_ordersign.py  0004_grant_description.py
grants/tests/: test_models.py
kubenetes/: leave-ingress.yml  leave-push-worker.yml
leave_management/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
leave_management/settings/: collectstatic.py  common.py  dev.py  prod.py
leaves/: admin.py  models.py  urls.py  views.py
leaves/migrations/: 0001_initial.py  0002_alter_leave_consume.py
leaves/tests/: test_models.py
members/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_member_approver.py
members/templatetags/: member_extras.py
members/tests/: test_models.py
orders/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_consume_order_is_all_day_alter_order_end_date_and_more.py  0002_rename_order_order_grant_leave_id.py  0003_order_canceled.py
orders/tests/: test_models.py
push/: __init__.py  admin.py  models.py  tasks.py  tests.py  urls.py  views.py
push/migrations/: 0001_initial.py
signs/: admin.py  exceptions.py  models.py  urls.py  views.py
templates/: _form.html  layout.html  main.html
(+20 files in other folders)
