[tool.poetry]
name = "leave_management"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
django-bootstrap4 = "^22.1"
sentry-sdk = "^1.5.12"
celery = "^5.2.7"
django-celery-results = "^2.3.1"
django-amazon-ses = "^4.0.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
